--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,26 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
+#Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+#Mod
+mod_version=1.1
+mod_group=fr.minemobs.puffercreateutils
+mod_id=puffercreateutils
+mod_name=PufferCreate: Utils
+mod_author=minemobs
+mod_description=Temp description
+mod_icon=examplemod.png
+
+#Forge
 mc_version=1.16.4
+version_forge=1.16.4-35.1.37
+version_mcp=20201028-1.16.3
+
+#Dependencies
 top_version=1.16:1.16-3.0.6-8
 jei_version=7.6.0.52
 mekanism_version=1.16.4-10.0.18.445
+version_patchouli=1.16.2-47
+version_psi=1.16-88.299
