--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ build
 # other
 eclipse
 run
+src/main/resources/blockbenchRessources
+src/main/resources/voxelShapes
 
 # Files from Forge MDK
 forge*changelog.txt
