--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 #Mod
-mod_version=1.1
-mod_group=fr.minemobs.puffercreateutils
-mod_id=puffercreateutils
-mod_name=PufferCreate: Utils
+mod_version=1.2
+mod_group=fr.minemobs.superpackutils
+mod_id=superpackutils
+mod_name=SuperPack: Utils
 mod_author=minemobs
 mod_description=Temp description
 mod_icon=examplemod.png
@@ -22,5 +22,3 @@ version_mcp=20201028-1.16.3
 top_version=1.16:1.16-3.0.6-8
 jei_version=7.6.0.52
 mekanism_version=1.16.4-10.0.18.445
-version_patchouli=1.16.2-47
-version_psi=1.16-88.299
