--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,29 +15,29 @@ license="MIT"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="puffercreateutils" #mandatory
+modId="superpackutils" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="${version}" #mandatory
+version="${file.jarVersion}}" #mandatory
  # A display name for the mod
-displayName="${mod_name}" #mandatory
+displayName="SuperPack: Utils" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="${mod_icon}" #optional
+logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
 #credits="you" #optional
 # A text field displayed in the mod UI
-authors="${mod_author}" #optional
+authors="minemobs" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 ${mod_description}
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.puffercreateutils]] #optional
+[[dependencies.superpackutils]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -49,22 +49,16 @@ ${mod_description}
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.puffercreateutils]]
+[[dependencies.superpackutils]]
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
     versionRange="[1.16.3,1.17)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.puffercreateutils]]
+[[dependencies.superpackutils]]
     modId="mekanism"
     mandatory=true
     versionRange="[10.0.18,]"
-    ordering="NONE"
-    side="BOTH"
-[[dependencies.puffercreateutils]]
-    modId="psi"
-    mandatory=true
-    versionRange="[1.16-85,)"
     ordering="NONE"
     side="BOTH"
