--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,4 @@ run
 
 # Files from Forge MDK
 forge*changelog.txt
-/src/main/resources/blockbenchRessources/
-/src/main/resources/voxelShapes/
+/src/generated/resources/.cache/
