--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,10 @@ repositories {
         name "curiosncaelus"
         url "https://maven.theillusivec4.top/"
     }
+    
+    maven { url = 'https://libraries.minecraft.net/' }
+    mavenCentral()
+    maven { url = 'https://maven.minecraftforge.net/' }
 }
 
 dependencies {
