--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,10 @@ dependencies {
     })
 
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
+
+    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
+
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 }
 
 jar {
