--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,3 +26,9 @@ license="MIT"
     versionRange="[1.16.3,1.17)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.superpackutils]]
+    modId="mekanism"
+    mandatory=true
+    versionRange="[1.16.4-10.0.18.445,)"
+    ordering="NONE"
+    side="BOTH"
