--- a/build.gradle
+++ b/build.gradle
@@ -139,8 +139,10 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
 
     compileOnly "mekanism:Mekanism:${mekanism_version}:api"
-
     runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+
+    implementation fg.deobf("curse.maven:citadel-331936:3198842")
+    implementation fg.deobf("curse.maven:ice-and-fire-dragons-264231:3217622")
 }
 
 jar {
@@ -148,9 +150,9 @@ jar {
         attributes([
             "Specification-Title": "${mod_name}",
             "Specification-Vendor": "${mod_author}",
-            "Specification-Version": "${version}", // We are version 1 of ourselves
+            "Specification-Version": "${mod_version}", // We are version 1 of ourselves
             "Implementation-Title": "${mod_name}",
-            "Implementation-Version": "${version}",
+            "Implementation-Version": "${mod_version}",
             "Implementation-Vendor" :"${mod_author}",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
             "MixinCoinfigs": "${mod_id}.mixins.json"],)
@@ -158,7 +160,7 @@ jar {
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    properties.classifier = 'sources'
     from sourceSets.main.allJava
 }
 
