--- a/build.gradle
+++ b/build.gradle
@@ -141,8 +141,10 @@ dependencies {
     compileOnly "mekanism:Mekanism:${mekanism_version}:api"
     runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
-    implementation fg.deobf("curse.maven:citadel-331936:3198842")
-    implementation fg.deobf("curse.maven:ice-and-fire-dragons-264231:3217622")
+    /*implementation fg.deobf("curse.maven:citadel-331936:3198842")
+    implementation fg.deobf("curse.maven:ice-and-fire-dragons-264231:3217622")*/
+    implementation fg.deobf(files("libs/citadel.jar"))
+    implementation fg.deobf(files("libs/iceandfire.jar"))
 }
 
 jar {
