Here is it @Jer0me226 You can edit all the crafts for the Worktable (I can't try it cause the dev environnement is broken)

--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,7 @@ dependencies {
 
     compileOnly fg.deobf(files("libs/citadel.jar"))
     compileOnly fg.deobf(files("libs/iceandfire.jar"))
+    compileOnly fg.deobf(files("libs/eidolon-0.2.7.jar"))
 }
 
 jar {
