--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,11 @@ repositories {
         name "curiosncaelus"
         url "https://maven.theillusivec4.top/"
     }
+
+    maven {
+        name "Hellfire"
+        url "https://maven.hellfiredev.net/"
+    }
     
     maven { url = 'https://libraries.minecraft.net/' }
     mavenCentral()
@@ -143,6 +148,9 @@ dependencies {
 
     compileOnly "mekanism:Mekanism:${mekanism_version}:api"
     runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    
+    compileOnly fg.deobf("hellfirepvp.astralsorcery:astralsorcery-1.16:1.16.5-1.13.12.v90")
+    runtimeOnly "hellfirepvp.astralsorcery:astralsorcery-1.16:1.16.5-1.13.12.v90:deobf"
 
     compileOnly fg.deobf(files("libs/citadel.jar"))
     compileOnly fg.deobf(files("libs/iceandfire.jar"))
