--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,10 @@ version_mcp=20201028-1.16.3
 #Dependencies
 top_version=1.16:1.16-3.0.6-8
 jei_version=7.7.0.106
-mekanism_version=1.16.4-10.0.18.445
+mekanism_version=1.16.5-10.0.20.447
+eidelon_version=0.2.7
+
+#Maven publish
+mvn_url=http://minemobs.galaxyfight.fr/releases
+mvn_alias=
+mvn_token=
