--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
     implementation fg.deobf("JeromeIsAWeeb:eidolon:${eidelon_version}")
+
+    compile fg.deobf("team.chisel.ctm:CTM:MC1.16.1-1.1.2.6")
 }
 
 jar {
