--- a/build.gradle
+++ b/build.gradle
@@ -137,8 +137,8 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${mc_version}-4.0.5.2")
 
-    //compileOnly "mekanism:Mekanism:${mekanism_version}:api"
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
     implementation fg.deobf("JeromeIsAWeeb:eidolon:${eidelon_version}")
 
