--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,8 @@ jobs:
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Generate data
+      run: ./datagen
     - name: Build with Gradle
       run: ./gradlew build
     - uses: actions/upload-artifact@v2
