--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    continue-on-error: true
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 8
