--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,8 +25,10 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Generate data
+      continue-on-error: true
       run: ./datagen
     - name: Build with Gradle
+      continue-on-error: true
       run: ./gradlew build
     - uses: actions/upload-artifact@v2
       with:
